# grep-main

./: CMakeLists.txt  Makefile  README.md  test1.txt  test2.txt
project/modules/: args_parser.h  globals.h  search.h
project/src/: args_parser.c  btz.txt  globals.c  main.c  mygrep  search.c
